<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="MissingPrefix">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:fontFamily="@font/din_pro_medium"
        android:gravity="center"
        android:text="@string/fragment_form_title"
        android:textColor="@color/title"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/message_sent"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/din_pro_medium"
        android:text="@string/thanks"
        android:textColor="@color/fund_title"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/message_sent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/din_pro_medium"
        android:gravity="center"
        android:text="@string/message_sent"
        android:textColor="@color/title"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/send_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/din_pro_medium"
        android:text="@string/send_message"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"/>

</RelativeLayout>