<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:paddingLeft="@dimen/margin"
            android:paddingRight="@dimen/margin"
            android:scrollbars="none"
            tools:ignore="MissingPrefix">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:gravity="center"
                android:text="@string/fragment_fund_title"
                android:textColor="@color/title"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/share_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/margin"
                android:layout_marginTop="@dimen/margin"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:textColor="@color/fund_title"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/fund_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/title"
            android:textSize="26sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/divider"/>

        <TextView
            android:id="@+id/what_is"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:textColor="@color/fund_title"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/definition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/fund_title"
            android:textSize="16sp"/>

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/line_chart"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="@dimen/margin_2x">
        </com.github.mikephil.charting.charts.LineChart>

        <TextView
            android:id="@+id/risk_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:textColor="@color/text_highlighted"
            android:textSize="16sp"/>

        <br.com.ismael.easynvest.ui.ColoredProgressBar
            android:id="@+id/risk"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:indeterminate="false"
            android:max="100"
            android:progress="0"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:gravity="center"
            android:text="@string/more_info_about_this_investment"
            android:textColor="@color/text_highlighted"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/fund"
                android:textColor="@color/title_info"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:text="@string/cdi"
                android:textColor="@color/title_info"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_05x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/in_month"
                android:textColor="@color/title_info"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/fund_in_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/cdi_in_month"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_05x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/in_year"
                android:textColor="@color/title_info"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/fund_in_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/cdi_in_year"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_05x"
            android:layout_marginTop="@dimen/margin_05x"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/in_12_months"
                android:textColor="@color/title_info"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/fund_in_12_months"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/cdi_in_12_months"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="right"
                android:textColor="@color/title"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@color/divider"/>
    </LinearLayout>

</ScrollView>